duy add 05/10 3h21